Fix spacing for tab content [Delivers #50592891]

--- a/app/assets/stylesheets/_auth_ng.css.sass
+++ b/app/assets/stylesheets/_auth_ng.css.sass
@@ -23,8 +23,8 @@
     position: fixed
     top: $tab-header-height
   .with-left-nav
-    padding-left: 30px
-    padding-right: 30px
+    @extend .tab-workbench
+    +tab-padding
 
 // make sure to hide intercom in the frame
 .tab-iframe
