--- a/app/assets/stylesheets/components/_entity_editor.css.sass
+++ b/app/assets/stylesheets/components/_entity_editor.css.sass
@@ -1,6 +1,8 @@
 // Common styles for all kinds of editors
 
 %entity-editor
+  .tab-main
+    @extend .tab-workbench
   // Editor configuration
   .editor-configuration
     h1
