--- a/app/assets/stylesheets/tabs/_content_delivery.css.sass
+++ b/app/assets/stylesheets/tabs/_content_delivery.css.sass
@@ -3,6 +3,9 @@
     @extend .link-list
   .tab-main > *
     @extend .expand-vertically
+  .with-left-nav
+    @extend .tab-workbench
+    +tab-padding
   .result-list
     tbody tr
       @extend %tr-clickable
