--- a/app/assets/stylesheets/tabs/_content_type_list.css.sass
+++ b/app/assets/stylesheets/tabs/_content_type_list.css.sass
@@ -1,4 +1,6 @@
 .content-type-list
+  .tab-main
+    @extend .tab-workbench
   .result-list
     tbody tr
       @extend %tr-clickable
