--- a/app/assets/stylesheets/tabs/_entry_list.css.sass
+++ b/app/assets/stylesheets/tabs/_entry_list.css.sass
@@ -23,11 +23,14 @@
   .tab-main
     .left-nav
       overflow-y: auto
+      @extend .tab-workbench
+      padding-left: 20px
+      padding-right: 20px
       padding: $tab-main-margin-top 20px 0
     .with-left-nav
-      // TODO this should be part iof tab-list-filters style
-      top: $tab-main-margin-top
-      bottom: 0
+      margin-top: $tab-main-margin-top // padding is ignored by absolute children
+      @extend .tab-workbench
+      @extend .expand-vertically
 
   .left-nav-bottom
     position: absolute
